--- a/tmux.conf
+++ b/tmux.conf
@@ -3,35 +3,34 @@ set -g mouse off
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style default
 
 # set window split
 bind-key v split-window -h
 bind-key b split-window
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour244,bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set -g pane-border-style fg=colour235
+set -g pane-active-border-style fg=colour166
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour green #green
+
+#window style
+set -g window-style 'fg=default,bg=default'
+set -g window-active-style 'fg=default,bg=default'
 
 
 set -g status-interval 1
@@ -54,7 +53,7 @@ set -s escape-time 0
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
 # client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
+setw -g aggressive-resize off
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside 
 # another TMUX session
@@ -66,8 +65,6 @@ set -g visual-activity on
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -100,8 +97,8 @@ run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
 
 # rm mouse mode fail
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse off'
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
+#if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse off'
+#if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
 
 # fix pane_current_path on new window and splits
 if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind c; bind c new-window -c "#{pane_current_path}"'
@@ -110,6 +107,4 @@ if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 
 if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
 
 ## https://powerline.readthedocs.io/en/latest/installation.html
-#if-shell 'test -f ~/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf' 'source-file ~/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
-
-if-shell 'test -f /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf' 'source-file /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+if-shell 'test -f /Users/mathias/.pyenv/versions/3.6.4/envs/powerline/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf' 'source-file /Users/mathias/.pyenv/versions/3.6.4/envs/powerline/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf'
